main.css
* {
  font-family: 'Inconsolata', monospace;
  font-size: 1em;
}

code {
  color: #F08742;
}

h1, h2, h3, h4, h5, h6 {
  color: #464357;
}

ul {
  padding: 0;
}

ul li {
  list-style: none;
}

a {
  color: #4779bd;
}

